--- a/source/_posts/我的第一篇博客.md
+++ b/source/_posts/我的第一篇博客.md
@@ -8,20 +8,11 @@ index_img: https://i.loli.net/2020/05/05/Gkb4Sev7cVf81zl.jpg
 
 
 
-这是我的第一篇博客
-也用来测试各种奇奇怪怪的功能和内容
-仅供我作参考
-请直接无视此文
+这是我的第一篇博客，
+也用来测试各种奇奇怪怪的功能和内容。
+仅供我作参考，
+请直接无视此文。
 
-
-
-
-<p class="codepen" data-height="892" data-theme-id="light" data-default-tab="result" data-user="zwjra" data-slug-hash="pojJQrZ" style="height: 892px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="pojJQrZ">
-  <span>See the Pen <a href=" ">
-  pojJQrZ</a > by zwj (<a href="https://codepen.io/zwjra">@zwjra</a >)
-  on <a href="https://codepen.io">CodePen</a >.</span>
-</p >
-<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
 
 
